[gd_scene load_steps=5 format=3 uid="uid://6byffhw72qqb"]

[ext_resource type="Script" path="res://prog52a/prog_52a.gd" id="1_6lvic"]
[ext_resource type="Theme" uid="uid://ddokiauedvbc" path="res://big50font.tres" id="2_0jh4l"]

[sub_resource type="LabelSettings" id="LabelSettings_c6w5m"]
font_size = 38

[sub_resource type="LabelSettings" id="LabelSettings_2uftr"]
font_size = 40

[node name="Prog52a" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_6lvic")

[node name="Label" type="Label" parent="."]
layout_mode = 0
offset_left = 52.0
offset_top = 40.0
offset_right = 348.0
offset_bottom = 137.0
text = "Length:"
label_settings = SubResource("LabelSettings_c6w5m")
horizontal_alignment = 1
vertical_alignment = 1

[node name="Label2" type="Label" parent="."]
layout_mode = 0
offset_left = 50.0
offset_top = 160.0
offset_right = 346.0
offset_bottom = 257.0
text = "Width:"
label_settings = SubResource("LabelSettings_c6w5m")
horizontal_alignment = 1
vertical_alignment = 1

[node name="lblArea" type="Label" parent="."]
layout_mode = 0
offset_top = 288.0
offset_right = 1152.0
offset_bottom = 381.0
text = "Area:"
label_settings = SubResource("LabelSettings_2uftr")
horizontal_alignment = 1

[node name="lblPerimiter" type="Label" parent="."]
layout_mode = 0
offset_left = -2.0
offset_top = 392.0
offset_right = 1150.0
offset_bottom = 485.0
text = "Perimiter:"
label_settings = SubResource("LabelSettings_2uftr")
horizontal_alignment = 1

[node name="lengthedit" type="LineEdit" parent="."]
layout_mode = 0
offset_left = 366.0
offset_top = 56.0
offset_right = 797.0
offset_bottom = 123.0
placeholder_text = "Length"

[node name="widthedit" type="LineEdit" parent="."]
layout_mode = 0
offset_left = 366.0
offset_top = 172.0
offset_right = 797.0
offset_bottom = 239.0
placeholder_text = "Width"

[node name="btnCalc" type="Button" parent="."]
layout_mode = 0
offset_left = 22.0
offset_top = 538.0
offset_right = 294.0
offset_bottom = 630.0
theme = ExtResource("2_0jh4l")
text = "Calculate"

[node name="btnClear" type="Button" parent="."]
layout_mode = 0
offset_left = 446.0
offset_top = 536.0
offset_right = 718.0
offset_bottom = 628.0
theme = ExtResource("2_0jh4l")
text = "Clear"

[node name="btnExit" type="Button" parent="."]
layout_mode = 0
offset_left = 858.0
offset_top = 538.0
offset_right = 1130.0
offset_bottom = 630.0
theme = ExtResource("2_0jh4l")
text = "Exit"

[connection signal="pressed" from="btnCalc" to="." method="_on_btn_calc_pressed"]
[connection signal="pressed" from="btnClear" to="." method="_on_btn_clear_pressed"]
[connection signal="pressed" from="btnExit" to="." method="_on_btn_exit_pressed"]
